--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: auto;
   height: 230px;
-  background: var(--seventhColor);
+  background: var(--SharedLayoutColor);
   text-align: center;
 }
 
@@ -33,4 +33,31 @@
 
 .footer .link {
   color: #ffffff;
+}
+
+@media (max-width: 480px) {
+  .footer {
+    height: auto;
+    padding: 30px 10px;
+  }
+  .footer h1 {
+    padding-top: 30px;
+    font-size: var(--MediumFontSize);
+  }
+  .footer .links {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .footer .links li {
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  .footer .links {
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
 }
