--- a/src/components/Offers/Banner/Banner.css
+++ b/src/components/Offers/Banner/Banner.css
@@ -30,3 +30,19 @@
 .banner h1 span {
   color: #ffffff;
 }
+
+@media screen and (max-width: 1024px) {
+  .banner {
+    width: auto;
+    height: auto;
+    margin: 20px 10px;
+  }
+
+  .banner::before {
+    width: auto;
+  }
+
+  .banner h1 {
+    font-size: var(--MediumFontSize);
+  }
+}
