--- a/src/components/Offers/Search/Search/Search.css
+++ b/src/components/Offers/Search/Search/Search.css
@@ -28,21 +28,20 @@
     -10px 1px 20px 0 var(--secondColor);
 }
 
-/* @media (max-width: 1024px) {
+@media (max-width: 1024px) {
   .search {
+    width: auto;
     padding-top: 6px;
     padding-bottom: 6px;
     padding-left: 30px;
-    padding-right: 30px;
-    max-width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: space-between;
     gap: 4px;
-    box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    border-radius: 0.5rem;
   }
-} */
+
+  .search .btn {
+    width: 120px;
+    height: auto;
+    font-size: var(--SemiMediumFontSize);
+  }
+}
