--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,7 +1,7 @@
 .about {
   width: var(--contentWidth);
   height: 600px;
-  margin: 90px 100px 10px 100px;
+  margin: 60px auto;
 }
 
 .about_data {
@@ -50,4 +50,50 @@
 
 .about_title {
   color: #ffffff;
+}
+
+@media screen and (max-width: 1024px) {
+  .about {
+    width: 100%;
+    height: auto;
+  }
+
+  .about_data {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about_description {
+    margin-left: auto;
+  }
+  .about_img {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: auto;
+  }
+
+  .about_info {
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .about_box .about_stats {
+    justify-content: space-between;
+  }
+  .stats {
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about_stats {
+    margin: 10px 0;
+    justify-content: center;
+    align-items: center;
+  }
 }
