--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,7 +21,7 @@ nav {
 }
 
 .link {
-  color: var(--thirdColor);
+  color: var(--secondColor);
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ nav {
 }
 
 .link-active {
-  color: var(--secondColor);
+  color: var(--mainColor);
   text-decoration: none;
   transition: 0.3s ease-in-out;
 }
@@ -51,7 +51,7 @@ nav {
   content: "";
   width: 30%;
   height: 2px;
-  background: var(--secondColor);
+  background: var(--mainColor);
   position: absolute;
   bottom: -4px;
   transition: 0.3s ease-in-out;
@@ -67,10 +67,13 @@ nav {
   display: none;
 }
 #mobile i {
-  color: var(--thirdColor);
+  color: var(--secondColor);
 }
 
 @media screen and (max-width: 1024px) {
+  .logo {
+    margin-left: -50px;
+  }
   #navbar {
     display: none;
     flex-direction: column;
@@ -82,7 +85,7 @@ nav {
     right: -300px;
     width: 40%;
     height: 100vh;
-    background: var(--seventhColor);
+    background: var(--altSecondColor);
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     transition: 0.3s ease-in-out;
     padding: 40px 0 0 10px;
@@ -104,5 +107,11 @@ nav {
   #mobile i {
     font-size: var(--SemiMediumFontSize);
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .logo {
+    margin-left: -90px;
   }
 }
