--- a/src/components/Offers/Banner/Banner.css
+++ b/src/components/Offers/Banner/Banner.css
@@ -21,7 +21,7 @@
   padding-top: 5%;
   text-transform: uppercase;
   font-size: var(--BigFontSize);
-  color: var(--secondColor);
+  color: var(--mainColor);
   z-index: 1;
   position: relative;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
