--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -18,7 +18,7 @@
 
 .about_info h1 {
   font-size: var(--SemiBigFontSize);
-  color: var(--firstColor);
+  color: var(--headerColor);
 }
 
 .about_info {
@@ -32,7 +32,7 @@
 }
 
 .about_stats {
-  background: var(--seventhColor);
+  background: var(--altSecondColor);
   border-radius: 0.75rem;
   padding: 0.75rem 0.5rem;
   height: 120px;
@@ -45,7 +45,7 @@
 .about_icon {
   font-size: 40px;
   border-radius: 20px;
-  border: 1px solid var(--thirdColor);
+  border: 1px solid var(--secondColor);
 }
 
 .about_title {
@@ -82,6 +82,10 @@
     text-align: center;
   }
 
+  .about_info h1 {
+    font-size: var(--MediumFontSize);
+  }
+
   .about_box .about_stats {
     justify-content: space-between;
   }
@@ -95,5 +99,23 @@
     margin: 10px 0;
     justify-content: center;
     align-items: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .about_img {
+    width: 400px;
+    height: 280px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .about_img {
+    width: 300px;
+    height: 190px;
+  }
+  .about_stats {
+    width: 50%;
+    height: 20%;
+    font-size: var(--SemiSmallFontSize);
   }
 }
