--- a/src/pages/PropertyDetails/PropertyDetails.css
+++ b/src/pages/PropertyDetails/PropertyDetails.css
@@ -23,7 +23,7 @@
 }
 
 .offer_element .country {
-  background-color: var(--fifthColor);
+  background-color: var(--additionalColor);
   border-radius: 30px;
   color: #fff;
   padding-left: 1.5rem;
@@ -37,7 +37,7 @@
 }
 
 .offer_price {
-  color: var(--firstColor);
+  color: var(--headerColor);
   font-size: var(--SemiMediumFontSize);
   text-align: right;
 }
@@ -45,8 +45,8 @@
 .offer_image {
   display: block;
   margin: 2rem auto;
-  max-width: 1200px;
-  max-height: 700px;
+  width: 1200px;
+  height: 700px;
   border-radius: 20px;
 }
 
@@ -54,7 +54,7 @@
   display: flex;
   gap: 0.8rem;
   justify-content: center;
-  color: var(--firstColor);
+  color: var(--headerColor);
   font-size: var(--SemiMediumFontSize);
   margin-bottom: 6px;
 }
@@ -68,7 +68,7 @@
 #header {
   text-align: center;
   margin-top: 3rem;
-  color: var(--firstColor);
+  color: var(--headerColor);
   font-size: var(--MediumFontSize);
 }
 .estate_agent {
@@ -117,7 +117,7 @@ textarea {
   height: 55px;
   border-radius: 30px;
   border: 0px;
-  background: linear-gradient(0.15turn, var(--firstColor), var(--fourthColor));
+  background: linear-gradient(0.15turn, var(--headerColor), var(--thirdColor));
   color: #ffffff;
   font-size: var(--MediumFontSize);
   text-decoration: none;
@@ -125,9 +125,13 @@ textarea {
 }
 
 .estate_agent .btn:hover {
-  color: var(--secondColor);
-  box-shadow: 10px -5px 20px 0 var(--fourthColor),
-    -10px 1px 20px 0 var(--secondColor);
+  color: var(--mainColor);
+  box-shadow: 10px -5px 20px 0 var(--thirdColor),
+    -10px 1px 20px 0 var(--mainColor);
+}
+
+#value {
+  text-align: center;
 }
 
 @media screen and (max-width: 1024px) {
@@ -161,7 +165,7 @@ textarea {
     display: flex;
     gap: 0.8rem;
     justify-content: center;
-    color: var(--firstColor);
+    color: var(--headerColor);
     font-size: var(--SemiMediumFontSize);
     margin-bottom: 6px;
   }
@@ -204,5 +208,15 @@ textarea {
   .estate_agent input,
   textarea {
     width: 250px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .offer_element {
+    font-size: var(--SemiSmallFontSize);
+  }
+  .offer_image {
+    width: 300px;
+    height: auto;
   }
 }
