--- a/src/components/OffersHome/Offers.css
+++ b/src/components/OffersHome/Offers.css
@@ -187,6 +187,10 @@
     width: 350px;
     height: 270px;
   }
+  .box::before {
+    width: 350px;
+    height: 270px;
+  }
 }
 
 @media screen and (max-width: 320px) {
